# keyboard-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
keyboard_ai/: __init__.py  cli.py  corpus.py  export.py  layout.py  optimizer.py  sample_corpus.txt  scoring.py
tests/: test_keyboard_ai.py
