[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keyboard-AI"
version = "0.1.0"
description = "Self-learning keyboard layout optimizer"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
]

[project.scripts]
keyboard-ai = "keyboard_ai.cli:main"

[tool.setuptools.packages.find]
include = ["keyboard_ai*"]

[tool.setuptools.package-data]
keyboard_ai = ["sample_corpus.txt"]

